  * Added Elements.eachText() and Elements.eachAttr(name), which return a list of Element's text or attribute values,
    respectively. This makes it simpler to for example get a list of each URL on a page:
    List<String> urls = doc.select("a").eachAttr("abs:href"");

  * Improved selector validation for :contains(...) with unbalanced quotes.
    <https://github.com/jhy/jsoup/issues/803>

  * Bugfix: if an attribute name started or ended with a control character, the parse would fail with a validation
    exception.
    <https://github.com/jhy/jsoup/issues/793>

  * Bugfix: Element.hasClass() and the ".classname" selector would not find the class attribute case-insensitively.
    <https://github.com/jhy/jsoup/issues/814>

  * Bugfix: In Jsoup.Connection, if a redirect contained a query string with %xx escapes, they would be double escaped
    before the redirect was followed, leading to fetching an incorrect location.

*** Release 1.10.2 [2017-Jan-02]
 * Improved startup time, particularly on Android, by reducing garbage generation and CPU execution time when loading
   the HTML entity files. About 1.72x faster in this area.

 * Added Element.is(query) to check if an element matches this CSS query.

 * Added new methods to Elements: next(query), nextAll(query), prev(query), prevAll(query) to select next and previous
   element siblings from a current selection, with optional selectors.

 * Added Node.root() to get the topmost ancestor of a Node.

 * Added the new selector :containsData(), to find elements that hold data, like script and style tags.

 * Changed Jsoup.isValid(bodyHtml) to validate that the input contains only body HTML that is safe according to the
   whitelist, and does not include HTML errors. And in the Jsoup.Cleaner.isValid(Document) method, make sure the doc
   only includes body HTML.
   <https://github.com/jhy/jsoup/issues/245>
   <https://github.com/jhy/jsoup/issues/632>
